--- a/src/styles.css
+++ b/src/styles.css
@@ -19,16 +19,21 @@
   font-weight: 300;
   src: url(https://fonts.gstatic.com/s/opensanscondensed/v24/z7NFdQDnbTkabZAIOl9il_O6KJj73e7Ff1GhDuXMQg.ttf) format('truetype');
 }
+
+/* --- GLOBAL --- */
 body {
-  background: #FFF linear-gradient(to bottom, #3F567C, #B5CCC6) no-repeat;
+  background: #0A0F1E linear-gradient(to bottom, #0A0F1E, #1B2735) no-repeat;
   font-family: Open Sans, sans-serif;
+  color: #EEE;
 }
 a {
   text-decoration: none;
   transition-duration: 0.3s;
+  color: #00B4D8;
 }
 a:hover {
-  transition-duration: 0.05s;
+  color: #FF4DD2;
+  text-shadow: 0 0 6px rgba(0, 180, 216, 0.7);
 }
 .window-margin {
   max-width: 1200px;
@@ -38,28 +43,25 @@ a:hover {
 .window {
   margin: auto;
   border-radius: 5px;
-  background: #FFF;
+  background: #121722;
   overflow: hidden;
   position: relative;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 180, 216, 0.1);
 }
-.window .sidebar .top-bar,
-.window .main .top-bar {
-  height: 65px;
-  color: #FFF;
-}
+
+/* --- SIDEBAR --- */
 .window .sidebar {
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   width: 250px;
-  background: #24282C;
+  background: #151A25;
+  color: #CCC;
   transition-duration: 0.3s;
-  color: #DDD;
 }
 .window .sidebar .top-bar {
-  background: #3AB0FF;
+  background: #00B4D8;
   overflow: hidden;
 }
 .window .sidebar .top-bar .logo {
@@ -70,7 +72,7 @@ a:hover {
   margin-left: 20px;
 }
 .window .sidebar .search-box {
-  background: #373D41;
+  background: #1E2433;
   padding: 20px;
   position: relative;
 }
@@ -80,20 +82,19 @@ a:hover {
   padding: 10px 20px;
   border-radius: 50px;
   outline: none;
-  color: #999;
+  color: #AAA;
+  background-color: #0F1520;
   transition-duration: 0.3s;
 }
 .window .sidebar .search-box input:focus {
-  color: #333;
-}
-.window .sidebar .search-box input:focus ~ .fa {
-  color: #999;
+  color: #FFF;
+  box-shadow: 0 0 6px #00B4D8;
 }
 .window .sidebar .search-box .fa {
   position: absolute;
   top: 31px;
   right: 35px;
-  color: #CCC;
+  color: #666;
   transition-duration: 0.3s;
   cursor: pointer;
 }
@@ -101,150 +102,49 @@ a:hover {
   padding-top: 20px;
 }
 .window .sidebar .menu .separator {
-  border-top: 1px solid #111111;
-  border-bottom: 1px solid #353535;
+  border-top: 1px solid #1E2537;
+  border-bottom: 1px solid #2C3550;
   margin: 20px;
 }
-.window .sidebar .menu a {
-  color: #DDD;
-  text-decoration: none;
-}
 .window .sidebar .menu a:hover {
-  color: #FFF;
-}
-.window .sidebar .menu .menu-name {
-  text-transform: uppercase;
-  padding: 0 20px;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-.window .sidebar .menu > ul.no-bullets > li a:before {
-  content: none !important;
-}
-.window .sidebar .menu > ul > li {
-  list-style: none;
-}
-.window .sidebar .menu > ul > li > a {
-  position: relative;
-  top: -3px;
-  font-size: 14px;
-  padding: 8px 25px;
-  display: block;
-  font-weight: bold;
-}
-.window .sidebar .menu > ul > li > a:before {
-  content: '';
-  height: 9px;
-  width: 9px;
-  border-radius: 50px;
-  display: inline-block;
-  margin-right: 10px;
-  box-shadow: inset 0 0 0 1px #EEE;
-}
-.window .sidebar .menu > ul > li.active {
-  list-style-type: disc;
-  color: #FF3A3A;
-  padding-bottom: 10px;
-}
-.window .sidebar .menu > ul > li.active > a {
-  padding-bottom: 0;
+  color: #00E0FF;
+  text-shadow: 0 0 5px #00B4D8;
 }
 .window .sidebar .menu > ul > li.active > a:before {
-  background: #FF3A3A;
-  box-shadow: none;
+  background: #FF4DD2;
+  box-shadow: 0 0 6px #FF4DD2;
 }
-.window .sidebar .menu > ul > li.active ul {
-  display: block;
-  margin-left: 50px;
-  margin-top: 5px;
-}
-.window .sidebar .menu > ul > li.active ul li.active a {
-  color: #FFF;
-  font-weight: bold;
-}
-.window .sidebar .menu > ul > li.active ul li a {
-  padding: 5px;
-  display: block;
-  font-size: 13px;
-  color: #888;
-}
-.window .sidebar .menu > ul > li.active ul li a:hover {
-  color: #FFF;
-}
-.window .sidebar .menu > ul > li ul {
-  display: none;
-}
+
+/* --- MAIN AREA --- */
 .window .main {
   transition-duration: 0.3s;
   position: relative;
+  background: #101624;
 }
 .window .main .top-bar {
-  background: #279CEB;
-}
-.window .main .top-bar .top-menu {
-  height: 65px;
-  overflow: hidden;
-}
-.window .main .top-bar .top-menu .menu-icon {
-  padding: 27px 20px 20px 18px;
-  display: none;
-  cursor: pointer;
-  transition-duration: 0.3s;
-}
-.window .main .top-bar .top-menu .menu-icon:hover {
-  background: #54baff;
-  transition-duration: 0.05s;
-}
-.window .main .top-bar .top-menu .menu-icon .line {
-  height: 2px;
-  width: 20px;
-  background: #FFF;
-  margin-bottom: 4px;
-}
-.window .main .top-bar .top-menu li {
-  float: left;
-  font-size: 14px;
-}
-.window .main .top-bar .top-menu li.active a,
-.window .main .top-bar .top-menu li.active a:hover {
-  background: #3AB0FF;
-  color: #FFF;
-  font-weight: bold;
+  background: #1E2A3A;
 }
 .window .main .top-bar .top-menu a {
-  padding: 0 25px;
-  color: #EEE;
-  line-height: 65px;
-  display: block;
+  color: #CCC;
 }
 .window .main .top-bar .top-menu a:hover {
-  color: #FFF;
-  background: rgba(58, 176, 255, 0.35);
+  background: rgba(0, 180, 216, 0.25);
+  color: #00E0FF;
 }
 .window .main .top-bar .profile-box {
   float: right;
-  background: #3AB0FF;
+  background: #00B4D8;
   height: 65px;
   line-height: 65px;
   padding: 0 20px;
   cursor: pointer;
 }
-.window .main .top-bar .profile-box .circle {
-  background: #FFF;
-  height: 30px;
-  width: 30px;
-  border-radius: 50px;
-  display: block;
-  float: left;
-  margin-top: 15px;
-}
-.window .main .top-bar .profile-box .arrow {
-  float: left;
-  margin-left: 10px;
-  line-height: 65px;
-}
+
+/* --- FEATURED MOVIE --- */
 .window .main .featured-movie {
   position: relative;
+  width: 100%;
+  height: 70vmin;
 }
 .window .main .featured-movie .cover {
   width: 100%;
@@ -256,9 +156,10 @@ a:hover {
   left: 20px;
   text-transform: uppercase;
   color: #FFF;
-  background: rgba(25, 25, 25, 0.3);
+  background: rgba(25, 25, 25, 0.5);
   padding: 10px;
   font-size: 13px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 .window .main .featured-movie .bottom-bar {
   position: absolute;
@@ -266,18 +167,18 @@ a:hover {
   left: 0;
   right: 0;
   padding: 20px 30px;
-  background: rgba(10, 10, 10, 0.8);
+  background: rgba(10, 15, 25, 0.85);
   color: #FFF;
   overflow: hidden;
 }
 .window .main .featured-movie .bottom-bar .title-container {
   float: left;
   font-weight: 100;
-  font-size: 40px;
+  font-size: 4vmin;
 }
 .window .main .featured-movie .bottom-bar .title-container .fa {
   margin-right: 10px;
-  color: #FF3A3A;
+  color: #FF4DD2;
 }
 .window .main .featured-movie .bottom-bar .title-container b {
   font-weight: 600;
@@ -289,7 +190,7 @@ a:hover {
 }
 .window .main .featured-movie .bottom-bar .right .stars {
   float: left;
-  color: #F0C236;
+  color: #FFD93D;
   margin-right: 20px;
 }
 .window .main .featured-movie .bottom-bar .right .share {
@@ -299,38 +200,22 @@ a:hover {
 .window .main .featured-movie .bottom-bar .right .share .fa {
   margin-right: 5px;
 }
+.iframe-featured {
+  height: 70vmin;
+  border: none;
+}
+
+/* --- MOVIE LIST --- */
 .window .main .movie-list .title-bar {
   padding: 20px;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #222C3F;
   overflow: hidden;
-}
-.window .main .movie-list .title-bar .left {
-  float: left;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-.window .main .movie-list .title-bar .left .grey {
-  color: #999;
+  color: #DDD;
 }
 .window .main .movie-list .title-bar .left .bold {
-  font-weight: bold;
-}
-.window .main .movie-list .title-bar .left p {
-  display: inline-block;
-  margin-right: 10px;
-}
-.window .main .movie-list .title-bar .right {
-  float: right;
-}
-.window .main .movie-list .title-bar .right a {
-  color: #999;
-  margin-left: 10px;
-}
-.window .main .movie-list .title-bar .right a.blue {
-  color: #279CEB;
+  color: ghostwhite;
 }
 .window .main .movie-list .list {
-  margin-right: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -340,9 +225,6 @@ a:hover {
   padding-bottom: 30px;
   margin-right: 20px;
   position: relative;
-}
-.window .main .movie-list .list li:hover:after {
-  opacity: 1;
 }
 .window .main .movie-list .list li:after {
   position: absolute;
@@ -354,28 +236,23 @@ a:hover {
   background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   opacity: 0;
-  color: #FFF;
+  color: #00E0FF;
   font-size: 40px;
-  display: block;
-  cursor: pointer;
   line-height: 195px;
   text-align: center;
   font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  -webkit-font-smoothing: antialiased;
+  transition: 0.3s;
+}
+.window .main .movie-list .list li:hover:after {
+  opacity: 1;
 }
 .window .main .movie-list .list li img {
   width: 130px;
   height: 195px;
   display: block;
   margin: 0 auto 5px auto;
-  cursor: pointer;
-}
-.window .main .movie-list .list li .title,
-.window .main .movie-list .list li .genre {
-  text-overflow: ellipsis;
-  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 180, 216, 0.3);
 }
 .window .main .movie-list .list li .title {
   font-weight: bold;
@@ -387,20 +264,68 @@ a:hover {
   font-size: 12px;
 }
 .window .main .movie-list .load-more {
-  background: #EEE;
+  background: #1E2A3A;
   padding: 15px;
   margin: 20px;
   border-radius: 5px;
   text-align: center;
-  color: #666;
+  color: #AAA;
   display: block;
 }
 .window .main .movie-list .load-more:hover {
-  background: #DDD;
+  background: #00B4D8;
+  color: #FFF;
+  transition: 0.3s;
 }
-.window .main .movie-list .load-more .fa {
-  margin-left: 10px;
+
+/* --- MOVIE INFO MODAL --- */
+.movie-info-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
 }
+.movie-info {
+  width: 70%;
+  height: 80vh;
+  background-color: rgba(20, 26, 40, 0.95);
+  padding: 20px;
+  border-radius: 10px;
+  overflow-y: auto;
+  color: #EEE;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 0 0 10px rgba(0, 180, 216, 0.2);
+}
+.movie-info-title {
+  width: 100%;
+}
+.movie-info-media {
+  width: 100%;
+  display: flex;
+  padding: 20px;
+}
+.movie-info-media-img img {
+  box-shadow: 0 0 10px rgba(0, 180, 216, 0.3);
+}
+.movie-info-media-text {
+  padding: 20px;
+  text-align: left;
+  color: #CCC;
+}
+.media-trailer {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+/* --- RESPONSIVE --- */
 @media only screen and (max-width: 1220px) {
   .window > .sidebar {
     transform: translateX(-250px);
@@ -418,59 +343,11 @@ a:hover {
     transform: translateX(250px);
   }
 }
-@media only screen and(max-width: 960px) {
+@media only screen and (max-width: 960px) {
   .window .main .featured-movie .bottom-bar {
     position: static;
   }
   .window .main .featured-movie .bottom-bar .title-container {
     font-size: 25px;
   }
-}
-
-/* Fondo transparente que cubre toda la pantalla */
-.movie-info-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6); /* semi-transparente */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 10000;
-}
-
-/* Contenedor cuadrado centrado */
-.movie-info {
-  width: 70%;
-  height: 80vh;
-  aspect-ratio: 1;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
-  border-radius: 10px;
-  overflow-y: auto;
-  position: relative;
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-}
-.movie-info-title{
-  width: 100%;
-}
-.movie-info-media{
-  width: 100%;
-  display: flex;
-  padding: 20px;
-}
-.movie-info-genres{
-width: 100%;
-text-align: left;
-}
-.movie-info-media-img{
-  
-}
-.movie-info-media-text{
-  padding: 20px;
-  text-align: left;
 }
