--- a/src/styles.css
+++ b/src/styles.css
@@ -36,8 +36,8 @@ a:hover {
   text-shadow: 0 0 6px rgba(0, 180, 216, 0.7);
 }
 .window-margin {
-  max-width: 1200px;
-  padding: 60px;
+  max-width: 100%;
+  padding: 3vmin;
   margin: auto;
 }
 .window {
@@ -47,72 +47,6 @@ a:hover {
   overflow: hidden;
   position: relative;
   box-shadow: 0 0 10px rgba(0, 180, 216, 0.1);
-}
-
-/* --- SIDEBAR --- */
-.window .sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 250px;
-  background: #151A25;
-  color: #CCC;
-  transition-duration: 0.3s;
-}
-.window .sidebar .top-bar {
-  background: #00B4D8;
-  overflow: hidden;
-}
-.window .sidebar .top-bar .logo {
-  float: left;
-  font-family: Open Sans Condensed, sans-serif;
-  font-size: 40px;
-  line-height: 65px;
-  margin-left: 20px;
-}
-.window .sidebar .search-box {
-  background: #1E2433;
-  padding: 20px;
-  position: relative;
-}
-.window .sidebar .search-box input {
-  width: 170px;
-  border: 0;
-  padding: 10px 20px;
-  border-radius: 50px;
-  outline: none;
-  color: #AAA;
-  background-color: #0F1520;
-  transition-duration: 0.3s;
-}
-.window .sidebar .search-box input:focus {
-  color: #FFF;
-  box-shadow: 0 0 6px #00B4D8;
-}
-.window .sidebar .search-box .fa {
-  position: absolute;
-  top: 31px;
-  right: 35px;
-  color: #666;
-  transition-duration: 0.3s;
-  cursor: pointer;
-}
-.window .sidebar .menu {
-  padding-top: 20px;
-}
-.window .sidebar .menu .separator {
-  border-top: 1px solid #1E2537;
-  border-bottom: 1px solid #2C3550;
-  margin: 20px;
-}
-.window .sidebar .menu a:hover {
-  color: #00E0FF;
-  text-shadow: 0 0 5px #00B4D8;
-}
-.window .sidebar .menu > ul > li.active > a:before {
-  background: #FF4DD2;
-  box-shadow: 0 0 6px #FF4DD2;
 }
 
 /* --- MAIN AREA --- */
@@ -131,20 +65,12 @@ a:hover {
   background: rgba(0, 180, 216, 0.25);
   color: #00E0FF;
 }
-.window .main .top-bar .profile-box {
-  float: right;
-  background: #00B4D8;
-  height: 65px;
-  line-height: 65px;
-  padding: 0 20px;
-  cursor: pointer;
-}
 
 /* --- FEATURED MOVIE --- */
 .window .main .featured-movie {
   position: relative;
   width: 100%;
-  height: 70vmin;
+  height: auto;
 }
 .window .main .featured-movie .cover {
   width: 100%;
@@ -152,13 +78,13 @@ a:hover {
 }
 .window .main .featured-movie .corner-title {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 1vmin;
+  left: 2vmin;
   text-transform: uppercase;
   color: #FFF;
   background: rgba(25, 25, 25, 0.5);
-  padding: 10px;
-  font-size: 13px;
+  padding: 1vmin;
+  font-size: 2vmin;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 .window .main .featured-movie .bottom-bar {
@@ -166,7 +92,7 @@ a:hover {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 20px 30px;
+  padding: 2vmin 3vmin;
   background: rgba(10, 15, 25, 0.85);
   color: #FFF;
   overflow: hidden;
@@ -177,7 +103,7 @@ a:hover {
   font-size: 4vmin;
 }
 .window .main .featured-movie .bottom-bar .title-container .fa {
-  margin-right: 10px;
+  margin-right: 1vmin;
   color: #FF4DD2;
 }
 .window .main .featured-movie .bottom-bar .title-container b {
@@ -185,20 +111,19 @@ a:hover {
 }
 .window .main .featured-movie .bottom-bar .right {
   float: right;
-  font-size: 14px;
-  margin-top: 14px;
+  font-size: 2vmin;
+  margin-top: 1vmin;
 }
 .window .main .featured-movie .bottom-bar .right .stars {
   float: left;
   color: #FFD93D;
-  margin-right: 20px;
 }
 .window .main .featured-movie .bottom-bar .right .share {
   float: left;
   cursor: pointer;
 }
 .window .main .featured-movie .bottom-bar .right .share .fa {
-  margin-right: 5px;
+  margin-right: 5vmin;
 }
 .iframe-featured {
   height: 70vmin;
@@ -207,7 +132,7 @@ a:hover {
 
 /* --- MOVIE LIST --- */
 .window .main .movie-list .title-bar {
-  padding: 20px;
+  padding: 4vmin;
   border-bottom: 1px solid #222C3F;
   overflow: hidden;
   color: #DDD;
@@ -221,9 +146,9 @@ a:hover {
   justify-content: space-between;
 }
 .window .main .movie-list .list li {
-  flex: 0 0 200px;
-  padding-bottom: 30px;
-  margin-right: 20px;
+  flex: 0 0 35vmin;
+  padding-bottom: 3vmin;
+  margin-right: 2vmin;
   position: relative;
 }
 .window .main .movie-list .list li:after {
@@ -231,7 +156,7 @@ a:hover {
   top: 0;
   left: 0;
   right: 0;
-  height: 195px;
+  height: auto;
   content: '\f144';
   background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
@@ -292,7 +217,7 @@ a:hover {
   z-index: 10000;
 }
 .movie-info {
-  width: 70%;
+  width: 75%;
   height: 80vh;
   background-color: rgba(20, 26, 40, 0.95);
   padding: 20px;
@@ -303,6 +228,13 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   box-shadow: 0 0 10px rgba(0, 180, 216, 0.2);
+  scrollbar-color: #888 #111;
+}
+.movie-info::-webkit-scrollbar{
+  width: 2vmin;
+  background: #EEE;
+  border-radius: 8px;
+  border: 2px solid black;
 }
 .movie-info-title {
   width: 100%;
@@ -311,20 +243,25 @@ a:hover {
   width: 100%;
   display: flex;
   padding: 20px;
+  flex-wrap: wrap;
 }
 .movie-info-media-img img {
   box-shadow: 0 0 10px rgba(0, 180, 216, 0.3);
+  padding: 2vmin;
 }
 .movie-info-media-text {
-  padding: 20px;
+  padding: 4vmin;
   text-align: left;
   color: #CCC;
+  width: 50%;
 }
 .media-trailer {
   width: 100%;
   overflow-x: hidden;
 }
-
+.genders{
+  padding: 4vmin;
+}
 /* --- RESPONSIVE --- */
 @media only screen and (max-width: 1220px) {
   .window > .sidebar {
